--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title> Best </title>
 </head>
 <body>
-
+    <p> I am discovering beautiful things. </p>
 </body>
 </html>
